# Train_Simulation

Rail/: CMakeLists.txt  example.txt  output.txt  rail.cpp  readme.txt
Rail/include/: deposit.hpp  line.hpp  station.hpp  train.hpp
Rail/input/: line_description.txt  line_description_1.txt  timetables.txt  timetables_1.txt  timetables_2.txt  timetables_3.txt
Rail/src/: deposit.cpp  line.cpp  line_input.cpp  line_stations.cpp  line_trains.cpp  station.cpp  train.cpp
